fix spacing for definition lists with multiple definitions

--- a/MoinMoin/static/css/common.css
+++ b/MoinMoin/static/css/common.css
@@ -326,8 +326,8 @@ li ul { margin-top: .25em; }
 /* definition lists  and blockquotes */
 dt { margin-top: .5em; font-weight: bold; }
 dl > dd { font-size: .92em; margin-left: 3em; margin-top: 0; margin-bottom: 0; }
-dd p { margin: .25em 0; }
-dd + dd p { margin-top: .67em; }
+dd { margin: .25em 0; }
+dd + dd { margin-top: .67em; }
 blockquote { padding-left: 2em; font-size: .92em; }
 blockquote blockquote { font-size: 1em; }
 ul blockquote { padding-left: 0; font-size: 1em; }
